# kiwi.fast

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
default_setting/: 1_application
src/interface/: config.h
src/kiwi.fast.batch/: CMakeLists.txt
src/kiwi.fast.batch/detail/: config.h
src/kiwi.fast.batch/src/: main.cpp
src/kiwi.fast.client/: CMakeLists.txt
src/kiwi.fast.client/src/: main.cpp
src/kiwi.fast.model/: CMakeLists.txt
src/kiwi.fast.model/detail/: cengshen.h  chongfu.h  config.h  query_condition.h  query_result.h  station_count.h  station_count_producer_consumer.h  task_parameter.h  tongcun.h  tongguo.h
src/kiwi.fast.plugin_utility/: CMakeLists.txt  code_conversion.h  codecvt.h  data_deque_value.h  data_object_value.h  data_value.h  error_code.h  exceptions.h  manager_external_interface.h  manager_module.h  plugin_registration.h  ptree_item.h  ptree_root.h  ptree_visitor.h  reset_variable_on_destroy.h  resource.h  resource_object_factory.h  service.h  service_command_line.h  service_data_value.h  service_exe_run_mode.h  service_log.h  service_object_factory.h  service_setting.h  setting_visitor.h  type_converter.h  value_converter.h
src/kiwi.fast.plugin_utility/detail/: code_convert_by_boost_locale.h  codecvt_char8_t_wchar_t.h  codecvt_char_wchar_t.h  config.h  data_value_wrapper.h  resource.h  typed_data_value.h
src/kiwi.fast.plugin_utility/detail/type_traits/: is_character_type.h
src/kiwi.fast.plugin_utility/detail/utility/: enable_if.h
src/kiwi.fast.plugin_utility/src/: codecvt.cpp  data_value.cpp  manager_module.cpp  ptree_item.cpp  ptree_visitor.cpp  setting_visitor.cpp
src/kiwi.fast.server/: CMakeLists.txt
src/kiwi.fast.server/detail/: config.h
src/kiwi.fast.server/src/: file.h  http_session.h  http_session_queue_beast_empty_body.cpp  http_session_queue_beast_file_body.cpp  http_session_queue_beast_string_body.cpp  http_session_queue_file_body.cpp  main.cpp
src/kiwi.fast.utility/: CMakeLists.txt  http_request.h  threadpool.h
src/kiwi.fast.utility/detail/: config.h
src/kiwi.fast.utility/src/: manager_external_interface_imp.cpp  manager_external_interface_imp.h  register_type.cpp  register_type.h  service_command_line_adapter.cpp  service_command_line_adapter.h  service_command_line_imp.cpp  service_command_line_imp.h  service_data_value_adapter.cpp  service_data_value_adapter.h  service_data_value_imp.cpp  service_data_value_imp.h  service_exe_run_mode_adapter.cpp  service_exe_run_mode_adapter.h  service_exe_run_mode_imp.cpp  service_exe_run_mode_imp.h  service_log_adapter.cpp  service_log_adapter.h  service_log_imp.cpp  service_log_imp.h  service_object_factory_adapter.cpp  service_object_factory_adapter.h  service_object_factory_imp.cpp  service_object_factory_imp.h  service_setting_adapter.cpp  service_setting_adapter.h  service_setting_imp.cpp  service_setting_imp.h  threadpool.cpp
src/test/: CMakeLists.txt  test_code_convert.cpp  test_code_convert.h  test_command_line.cpp  test_example.cpp  test_exception.cpp  test_setting.cpp  test_test.cpp
